--- a/base.html
+++ b/base.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>The MIT Conclave</title>
-	<link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styling.css" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Conclave '18</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gaegu">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="styling.css">
 </head>
+
 <body>
-<div id="top">
-	<h1 align="center" style="margin:auto;" class="animated zoomIn">The Manipal Conclave 2018</h1>
-	<h2 align="center" style="margin: auto;position:relative;top:50%;" class="animated fadeInUp">Venue: Library Auditorium</h2>
-</div>
-<div id="bottom">
-<h1 align="center" class="wow fadeIn">Speakers</h1>
-</div>
+	<div id="top" class="fullscreen">
+		<h1 align="center" style="margin:auto;" class="animated zoomIn">The Manipal Conclave 2018</h1>
+		<h2 align="center" style="margin: auto;position:relative;top:50%;" class="animated fadeInUp">Venue: Library Auditorium</h2>
+	</div>
+	<div class="carousel">
+		<div class="carousel-view">
+			<ul>
+				<li>
+					<div class="slide">
+						<h1>Slide 1</h1>
+					</div>
+				</li>
+				<li>
+					<div class="slide">
+						<h1>Slide 2</h1>
+					</div>
+				</li>
+				<li>
+					<div class="slide">
+						<h1>Slide 3</h1>
+					</div>
+				</li>
+				<li>
+					<div class="slide">
+						<h1>Slide 4</h1>
+					</div>
+				</li>
+				<li>
+					<div class="slide">
+						<h1>Slide 5</h1>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div class="carousel-dots">
+			<ul></ul>
+		</div>
+		<i class="carousel-previous fas fa-chevron-left"></i>
+		<i class="carousel-next fas fa-chevron-right"></i>
+		<script src="script.js"></script>
+	</div>
 </body>
+
 </html>
