Added background images and description

--- a/base.html
+++ b/base.html
@@ -21,27 +21,58 @@
 			<ul>
 				<li>
 					<div class="slide">
-						<h1>Slide 1</h1>
+						<div id="card-1" class="card">
+							<p>
+								Abhishek Upmanyu is one of the finest young comedians in the country, representing fresh new talent on the scene. Known
+								for killing it on stage, he hurls one cracker of a joke after another, thanks to his Shatabdi-fast delivery and unparalleled
+								observational powers. His quick tongue (he thinks faster than he can speak) enables him to finish hours of material in minutes
+								and is what gave rise to his brand new show, "Thoda Saaf Bol".
+							</p>
+						</div>
 					</div>
 				</li>
 				<li>
 					<div class="slide">
-						<h1>Slide 2</h1>
+						<div id="card-2" class="card">
+							<p>
+								Atul Gurtu started his research career in 1966. He has been involved in experimental particle physics research. His group
+								at the Tata Institute was part of large experimental collaborations based at CERN, Geneva, Switzerland.
+							</p>
+						</div>
 					</div>
 				</li>
 				<li>
 					<div class="slide">
-						<h1>Slide 3</h1>
+						<div id="card-3" class="card">
+							<p>
+								A professor, cyclist, traveller and much more. Ganesh Nayak an alumnus and professor at MIT, has cycled across India and
+								aims to capture the essence of health and living.
+							</p>
+						</div>
 					</div>
 				</li>
 				<li>
 					<div class="slide">
-						<h1>Slide 4</h1>
+						<div id="card-4" class="card">
+							<p>
+								"Girish Narayandass is the Head Writer at AIB. He started his career as a Mechanical Engineer but later found his true calling
+								in advertising. So he became a copywriter and worked on some of the biggest brands. But then he found his true true calling
+								in comedy. So he joined AIB, where he intends to stay until he finds his true true true calling. Also, when he's not writing
+								sketches he's replying to Emails and writing bios in third person at 2 am" - Girish Narayandass
+							</p>
+						</div>
 					</div>
 				</li>
 				<li>
 					<div class="slide">
-						<h1>Slide 5</h1>
+						<div id="card-5" class="card">
+							<p>
+								A celebrated Bollywood and Sufi singer Kavita Seth has lent her voice to Bollywood chart toppers like Iktara, Mora Piya,
+								Tum Hi Ho Bandhu among others. Her personal work with music celebrates Sufi poets like Khusrow, Bulleh Shah, Rumi, Mirza
+								Ghalib. She has recently started a podcast titled 'Main Kavita Hoon' on her YouTube channel to introduce music connoisseurs
+								with legendary and upcoming poets along with her soulful compositions.
+							</p>
+						</div>
 					</div>
 				</li>
 			</ul>
