Modify caption text and position

--- a/base.html
+++ b/base.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="top" class="fullscreen">
 		<h1 align="center" style="margin:auto;" class="animated zoomIn">The Manipal Conclave 2018</h1>
-		<h2 align="center" style="margin: auto;position:relative;top:50%;" class="animated fadeInUp">Venue: Library Auditorium</h2>
+		<h2 align="center" style="margin: auto;position:relative;" class="animated fadeInUp">Venue: Library Auditorium</h2>
 	</div>
 	<div class="carousel">
 		<div class="carousel-view">
@@ -22,6 +22,7 @@
 				<li>
 					<div class="slide">
 						<div id="card-1" class="card">
+							<h3>Abhishek Upmanyu</h3>
 							<p>
 								Abhishek Upmanyu is one of the finest young comedians in the country, representing fresh new talent on the scene. Known
 								for killing it on stage, he hurls one cracker of a joke after another, thanks to his Shatabdi-fast delivery and unparalleled
@@ -34,6 +35,7 @@
 				<li>
 					<div class="slide">
 						<div id="card-2" class="card">
+							<h3>Atul Gurtu</h3>
 							<p>
 								Atul Gurtu started his research career in 1966. He has been involved in experimental particle physics research. His group
 								at the Tata Institute was part of large experimental collaborations based at CERN, Geneva, Switzerland.
@@ -44,6 +46,7 @@
 				<li>
 					<div class="slide">
 						<div id="card-3" class="card">
+							<h3>Ganesh Nayak</h3>
 							<p>
 								A professor, cyclist, traveller and much more. Ganesh Nayak an alumnus and professor at MIT, has cycled across India and
 								aims to capture the essence of health and living.
@@ -54,6 +57,7 @@
 				<li>
 					<div class="slide">
 						<div id="card-4" class="card">
+							<h3>Girish Narayandass</h3>
 							<p>
 								"Girish Narayandass is the Head Writer at AIB. He started his career as a Mechanical Engineer but later found his true calling
 								in advertising. So he became a copywriter and worked on some of the biggest brands. But then he found his true true calling
@@ -66,6 +70,7 @@
 				<li>
 					<div class="slide">
 						<div id="card-5" class="card">
+							<h3>Kavita Seth</h3>
 							<p>
 								A celebrated Bollywood and Sufi singer Kavita Seth has lent her voice to Bollywood chart toppers like Iktara, Mora Piya,
 								Tum Hi Ho Bandhu among others. Her personal work with music celebrates Sufi poets like Khusrow, Bulleh Shah, Rumi, Mirza
